--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -24,6 +24,7 @@
   }
 
   a {
+    position: relative;
     font-size: 0.9rem;
     letter-spacing: 0.2em;
     font-weight: 500;
@@ -35,5 +36,23 @@
       font-size: 1rem;
       font-weight: 300;
     }
+  }
+
+  a::before {
+    content: "";
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: #fff;
+    visibility: hidden;
+    transform: scaleX(0);
+    transition: all 300ms;
+  }
+
+  a:hover::before {
+    visibility: visible;
+    transform: scaleX(1);
   }
 }
