--- a/assets/styles/modules/_devices-scaled.css
+++ b/assets/styles/modules/_devices-scaled.css
@@ -43,7 +43,7 @@
   padding: calc(26px / var(--size-divisor));
   background: #fdfdfd;
   box-shadow: inset 0 0 calc(11px / var(--size-divisor)) 0 black,
-    rgba(46, 46, 61, 0.24) 0 calc(24px / var(--size-divisor)) calc(32px / var(--size-divisor)) 0;
+    0 24px 64px 0 rgba(46, 46, 61, 0.24);
   border-radius: calc(66px / var(--size-divisor));
 }
 .marvel-device.iphone-x .overflow {
