--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -21,7 +21,7 @@
 @import "modules/_subsection-subtitle";
 @import "modules/_link";
 @import "modules/_icon-list";
-@import "modules/_feature-item";
+@import "modules/_feature";
 @import "modules/_background-image";
 @import "modules/_testimonial";
 @import "modules/_site-footer";
