--- a/assets/styles/modules/_testimonial.css
+++ b/assets/styles/modules/_testimonial.css
@@ -5,8 +5,8 @@
     background-color: $lightBlue;
     color: $secondaryGrey;
     @mixin atMedium {
-        padding: 80px 1.8125rem 1px 1.8125rem;
-        background-color: rgba(255, 255, 255, .8);
+        padding: 80px 1.8125rem 1rem 1.8125rem;
+        background-color: rgba(255, 255, 255, .9);
     }
 
     &--b-margin-until-medium {
