--- a/app/assets/styles/modules/_testimonial.css
+++ b/app/assets/styles/modules/_testimonial.css
@@ -1,45 +1,51 @@
 .testimonial {
-    position: relative;
-    height: 100%;
-    padding: 80px 18px 1px 18px;
-    background-color: $lightBlue;
-    color: $secondaryGrey;
+  position: relative;
+  height: 100%;
+  padding: 80px 18px 1px 18px;
+  background-color: $lightBlue;
+  color: $secondaryGrey;
+  @mixin atMedium {
+    padding: 80px 1.8125rem 1.125rem 1.8125rem;
+    background-color: rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255, 0.9);
+  }
+
+  &--b-margin-until-medium {
+    margin-bottom: 80px;
     @mixin atMedium {
-        padding: 80px 1.8125rem 1rem 1.8125rem;
-        background-color: rgba(255, 255, 255, .9);
+      margin-bottom: 0px;
     }
+  }
 
-    &--b-margin-until-medium {
-        margin-bottom: 80px;
-        @mixin atMedium {
-            margin-bottom: 0px;
-        }
-    }
+  &__profile-picture {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -100%);
+    width: 160px;
+    height: 160px;
+    border: 6px solid rgba(255, 255, 255);
+    border-radius: 80px;
+    background-color: rgba(255, 255, 255);
+    overflow: hidden;
+  }
 
-    &__profile-picture {
-        position: absolute;
-        left: 50%;
-        transform: translate(-50%, -100%);
-        width: 160px;
-        height: 160px;
-        border-radius: 80px;
-        overflow: hidden;
-        border: 6px solid rgba(255, 255, 255, .8);
-    }
+  &__profile-picture img {
+    width: 100%;
+  }
 
-    &__title {
-        text-align: center;
-        margin: 0;
-        font-size: 1.5rem;
-        font-weight: 500;
-        color: $mainGrey;
-    }
+  &__title {
+    text-align: center;
+    margin: 0.5rem 0 0 0;
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: $mainGrey;
+  }
 
-    &__subtitle {
-        text-align: center;
-        margin: .25rem 0 1rem 0;
-        font-size: 0.9375rem;
-        font-weight: 400;
-        color: $mainOrange;
-    }
+  &__subtitle {
+    text-align: center;
+    margin: 0.25rem 0 0.5rem 0;
+    font-size: 0.9375rem;
+    font-weight: 400;
+    color: $mainOrange;
+  }
 }
