--- a/assets/styles/modules/_flex-row.css
+++ b/assets/styles/modules/_flex-row.css
@@ -38,7 +38,9 @@
   }
 
   &__item-half:first-child {
-    margin-right: 64px;
+    @mixin atMedium {
+      margin-right: 64px;
+    }
   }
 
   &__item--4 {
