--- a/assets/styles/modules/_large-hero.css
+++ b/assets/styles/modules/_large-hero.css
@@ -7,12 +7,12 @@
       rgba(126, 57, 57, 0),
       rgba(0, 0, 0, 0.7)
     ),
-    url("/assets/images/night-mountains-hero.jpg");
+    url('/assets/images/night-mountains-hero.jpg');
   background-position: center top;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  font-family: "Open Sans", Helvetica, sans-serif;
+  font-family: 'Open Sans', Helvetica, sans-serif;
 
   &__image img {
     position: absolute;
@@ -22,7 +22,7 @@
   }
 
   &__image::after {
-    content: "";
+    content: '';
     position: absolute;
     left: 0;
     top: 0;
@@ -38,17 +38,17 @@
 
   &__text-content {
     position: absolute;
-    top: 33%;
-    left: 50%;
-    transform: translateX(-50%);
-    max-width: 400px;
-    border-radius: 50%;
+    top: 25%;
+    text-align: center;
     letter-spacing: 0.2em;
     text-transform: uppercase;
-    text-align: center;
     z-index: 1;
-
     @mixin atMedium {
+      top: 33%;
+      left: 50%;
+      transform: translateX(-50%);
+      max-width: 400px;
+      border-radius: 50%;
     }
   }
 
@@ -72,7 +72,7 @@
 
   &__title::before,
   &__title::after {
-    content: "";
+    content: '';
     position: absolute;
     display: block;
     width: 100%;
@@ -136,7 +136,7 @@
   }
 
   &:after {
-    content: "";
+    content: '';
     position: absolute;
     left: 0;
     top: 0;
