--- a/assets/styles/modules/_site-header.css
+++ b/assets/styles/modules/_site-header.css
@@ -1,7 +1,7 @@
 .site-header {
   position: fixed;
-  z-index: 10;
-  width: 100%;
+  z-index: 1;
+  width: 100vw;
   padding: 15px 0;
   @mixin atMedium {
   }
@@ -17,21 +17,9 @@
 
   &__menu-content {
     position: relative;
-    display: flex;
-    padding-top: 90px;
+    padding: 0 15px;
     line-height: 1.75em;
-    flex-flow: column;
-    align-items: center;
-    opacity: 0;
-    z-index: -10;
-    transform: scale(1.2);
-    transition: all 0.1s ease-out;
     @mixin atMedium {
-      flex-flow: row;
-      justify-content: flex-end;
-      padding-top: 0;
-      opacity: 1;
-      transform: scale(1);
     }
   }
 
@@ -42,6 +30,7 @@
   }
 
   &__menu-icon {
+    display: none;
     position: absolute;
     top: 10px;
     right: 10px;
