--- a/app/assets/styles/modules/_button.css
+++ b/app/assets/styles/modules/_button.css
@@ -1,7 +1,7 @@
 .button {
   position: relative;
   display: inline-block;
-  margin: 0 1rem;
+  /* margin: 0 1rem; */
   padding: 0.75em 2em;
   line-height: 1.5rem;
   font-family: "Open Sans", Helvetica, sans-serif;
@@ -24,7 +24,7 @@
   }
 
   &--large {
-    margin-top: 1.75rem;
+    /* margin-top: 1.75rem; */
     width: 11.75em;
     padding: 0.75em 0;
   }
