--- a/assets/styles/modules/_large-hero.css
+++ b/assets/styles/modules/_large-hero.css
@@ -105,12 +105,11 @@
     }
   }
 
-  &__button {
+  &__button-wrapper {
     position: absolute;
     top: calc(100% + 1.5rem);
     left: 50%;
-    transform: translateX(-50%);
-    display: inline-block;
+    /* display: inline-block;
     width: 11.75em;
     border: 0;
     padding: 0.75em 0;
@@ -120,8 +119,9 @@
     text-decoration: none;
     color: #fff;
     text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.1);
-    box-shadow: inset 0 0 0 1px #ffffff;
+    box-shadow: inset 0 0 0 1px #ffffff; */
     opacity: 1;
+    transform: translateX(-50%);
     transition: opacity 1250ms ease-in-out 1250ms,
       background-color 0.2s ease-in-out;
 
@@ -154,7 +154,7 @@
 
   &--is-preload .large-hero__title,
   &--is-preload .large-hero__description,
-  &--is-preload .large-hero__button {
+  &--is-preload .large-hero__button-wrapper {
     opacity: 0;
   }
 
