--- a/assets/styles/base/_variables.css
+++ b/assets/styles/base/_variables.css
@@ -1,8 +1,8 @@
 $mainGrey: #2E3842;
 $secondaryGrey: #5E7387;
-$mainTurqoise: #21B2A6;
-$mainPurple: #505393;
-$mainBlue: #2F5572;
-$lightBlue: #E0E6EF;
-
 $mainOrange: #D59541;
+$mainBlue: #E0E6EF;
+
+/* $mainTurqoise: #21B2A6;
+$mainPurple: #505393;
+$mainBlue: #2F5572; */
