--- a/assets/styles/modules/_feature.css
+++ b/assets/styles/modules/_feature.css
@@ -1,5 +1,5 @@
 .feature {
-  transition: box-shadow 450ms, opacity 450ms;
+  transition: box-shadow 300ms, opacity 300ms;
   @mixin atSmall {
     padding: 14px 26px;
     &:hover,
@@ -12,25 +12,18 @@
     }
   }
 
-  &__item {
+  &__text {
     position: relative;
+    padding-left: 3.375em;
+    padding-top: 0.3em;
     text-align: left;
   }
 
-  &__item--icon {
-    padding-left: 3.375em;
-    padding-top: 0.3em;
-  }
-
-  &__item--iconless {
-    padding-left: 0;
-  }
-
   &__icon {
-    display: block;
     position: absolute;
     left: 0;
     top: 0;
+    display: block;
     width: 2.5em;
     height: 2.5em;
     color: $mainOrange;
@@ -42,11 +35,11 @@
   }
 
   &__title {
+    margin: 0 0 0.4em 0;
     font-size: 1.125rem;
     line-height: 1.5;
     font-weight: 600;
     text-align: left;
-    margin: 0 0 0.4em 0;
     color: $mainGrey;
     @mixin atSmall {
       font-size: 1.375rem;
