--- a/assets/styles/modules/_frame.css
+++ b/assets/styles/modules/_frame.css
@@ -2,13 +2,14 @@
   background: transparent;
   box-shadow: rgba(46, 46, 61, 0.24) 0px 24px 64px 0px;
   
-  &--image {
+  &--content-image {
     @mixin atSmall {
       padding: 20px;
     }
   }
 
-  &--text {
+  &--content-text {
     padding: 20px 30px;
+    text-align: center;
   }
 }
