--- a/assets/styles/modules/_subsection.css
+++ b/assets/styles/modules/_subsection.css
@@ -1,21 +1,14 @@
 .subsection {
-  margin-top: 4rem;
-  margin-bottom: 4rem;
+  margin: 4rem auto;
 
   &--narrow {
     @mixin atMedium {
-      margin-left: auto;
-      margin-right: auto;
       max-width: 1080px;
     }
   }
 
   &--extra-narrow {
-    @mixin atMedium {
-      margin-left: auto;
-      margin-right: auto;
-      max-width: 800px;
-    }
+    max-width: 700px;
   }
 
   &--inline {
@@ -31,18 +24,21 @@
     margin-top: calc(4rem + 80px);
   }
 
+  &--divider {
+    padding-top: 4rem;
+    @mixin atSmall {
+      padding-top: 5rem;
+    }
+  }
+
   &--divider::before {
     content: '';
-    display: block;
-    position: relative;
+    position: absolute;
     top: 0;
     left: 0;
-    margin-bottom: 4rem;
+    display: block;
     width: 100%;
     height: 1px;
     background: #e2e2e9;
-    @mixin atSmall {
-      margin-bottom: 5rem;
-    }
   }
 }
