--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -14,28 +14,6 @@
   background-attachment: fixed;
   font-family: 'Open Sans', Helvetica, sans-serif;
 
-  &__image img {
-    position: absolute;
-    top: 0;
-    display: block;
-    width: 100%;
-  }
-
-  &__image::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    display: inline-block;
-    background: linear-gradient(
-      to bottom,
-      rgba(0, 0, 0, 0),
-      rgba(0, 0, 0, 0.7)
-    );
-  }
-
   &__text-content {
     position: absolute;
     top: 25%;
@@ -109,17 +87,6 @@
     position: absolute;
     top: calc(100% + 1.5rem);
     left: 50%;
-    /* display: inline-block;
-    width: 11.75em;
-    border: 0;
-    padding: 0.75em 0;
-    line-height: 1.5rem;
-    font-weight: 300;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: #fff;
-    text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.1);
-    box-shadow: inset 0 0 0 1px #ffffff; */
     opacity: 1;
     transform: translateX(-50%);
     transition: opacity 1250ms ease-in-out 1250ms,
@@ -134,7 +101,7 @@
     }
   }
 
-  &:after {
+  &::after {
     content: '';
     position: absolute;
     left: 0;
@@ -148,8 +115,8 @@
     pointer-events: none;
   }
 
-  &--is-preload .large-hero__title {
-    transform: scale(0.95);
+  &--is-preload::after {
+    opacity: 1;
   }
 
   &--is-preload .large-hero__title,
@@ -158,12 +125,12 @@
     opacity: 0;
   }
 
+  &--is-preload .large-hero__title {
+    transform: scale(0.95);
+  }
+
   &--is-preload .large-hero__title::before,
   &--is-preload .large-hero__title::after {
     width: 0;
-  }
-
-  &--is-preload:after {
-    opacity: 1;
   }
 }
