--- a/app/assets/styles/modules/_link.css
+++ b/app/assets/styles/modules/_link.css
@@ -1,14 +1,11 @@
 .link {
-  margin-right: 1rem;
+  /* margin-right: 1rem; */
   line-height: 1.65;
   font-weight: 500;
   color: $mainOrange;
   text-decoration: none;
   @mixin atSmall {
     font-size: 1.125rem;
-  }
-
-  &:hover {
   }
 
   &__icon {
